# cpp-event-system

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: event.h  event_bus.h  subscriber.h
src/: main.cpp
tests/: test_event_bus.cpp
